...
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_top_bar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/pocketpaint_main_top_bar_height"
    tools:showIn="@layout/activity_pocketpaint">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
...
                android:layout_marginTop="12dip"
                android:src="@drawable/ic_pocketpaint_color_palette"
                app:tint="@android:color/white" />
        </FrameLayout>

        <ImageButton
            android:id="@+id/btn_top_layers"
            style="?actionButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_pocketpaint_layers"/>
    </LinearLayout>
...
