...
        android:layout_above="@id/intro_navigation"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_chooser_white"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_above="@id/intro_horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>

