<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="welcome">Paintroid welcomes you!</string>
    <string name="app_name">Paintroid</string>
    
    <string name="quit">Quit</string>
    <string name="clear">Clear Drawing</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset Zoom</string>
...
