...
    <string name="menu_add_to_current_layer">Add to current layer</string>
    <string name="menu_save_image">Save image</string>
    <string name="menu_save_copy">Save copy</string>
    <string name="menu_hide_menu">Hide buttons</string>
    <string name="share_image_menu">Share image</string>
    <string name="share_image_via_text">Send image via</string>
    <string name="pocketpaint_menu_about" translatable="false">@string/pocketpaint_about_title</string>
    <string name="menu_rate_us">Rate us!</string>
    <string name="menu_export">Export</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_advanced">Advanced settings</string>
    <string name="menu_zoom_settings">Zoom window settings</string>
    <string name="saved_to">Image saved to\n</string>
...
